<resources>
    <string name="app_name">FoodSaver</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_maps">FoodSaver</string>
    <string name="status_details">Your order has been placed successfully!</string>
    <string name="status_details2">Pickup Address:</string>
    <string name="status_details3">36 Holland Drive, #01-03/04/05, <n />Singapore 270036</string>
    <string name="status_button">View Directions</string>
    <string name="addtocartbut">ADD TO CART</string>
    <string name="cfmorderbut">CONFIRM ORDER</string>
    <string name="carttable1">Points</string>
    <string name="carttable2">Total</string>
    <string name="tandc">By confirming your order, you agree to buy products close to its expiration date. View guidelines on checking products before consumption.</string>
    <string name="whypara1">Food waste is a major issue in the world. Particularly in Singapore, an average of 0.75kg of waste is disposed by each household every day. In 2020, 665000 tonnes of food waste were generated in Singapore and 81% of the waste had to be disposed. However, end users are not the only producers of food waste. Supermarkets and shops also produce a lot of food waste because they will only want to sell the freshest stock of food to attract customers.<n /><n />
        As a result of the increasing food waste, more resources must be utilised to grow, transport, and dispose of excess food, such as energy, fuel and water. Disposal of food waste contributes to greenhouse gas emissions Consequently, Singapore’s carbon footprint increases, which can hasten the effects of global warming and climate change. <n /><n /></string>
    <string name="whypara2">
Aside from environmental impacts, food wastage also causes economic losses as food costs money to produce. Even though so much food is being disposed, there are still other countries with many people lacking food, as they cannot afford sufficient food. Disposal of edible food will further heighten this social-economic issue. <n /><n />
With many impacts linked to food waste, the United Nations has attempted to slow down the production of food waste by coming up with UN Sustainable Development Goal 12 – “responsible consumption and production”. Hence, Singapore must do more to further decrease her amount of food wasted, other than donating food to the needy and carrying out food campaigns to encourage citizens to waste less food. To tackle this problem, we should look at the base of the problem: the food distributors. <n /><n />
        By using FoodSaver, you are helping to minimise the food wastage in Singapore. Since 2021, FoodSaver has signficantly reduce the amount of food wastage in Singapore by 15%.
</string>
    <string name="channel_name">FoodSaver</string>
    <string name="channel_description">Null</string>

</resources>