<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cart.CartActivity">
    <include
        android:id="@+id/topbar_cart"
        layout="@layout/topbar_cart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartRecview"
        android:layout_width="match_parent"
        android:layout_height="187dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topbar_cart" />

    <TextView
        android:id="@+id/addr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:text="Pick-Up Address:"
        android:textColor="@color/main"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cartRecview" />

    <TextView
        android:id="@+id/addr2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/status_details3"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addr" />

    <TextView
        android:id="@+id/tableval1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="120dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/carttable1"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/tableval2"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tableval2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="133dp"
        android:layout_marginBottom="150dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/carttable2"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/ptsphlder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:fontFamily="sans-serif-black"
        android:text="00"
        android:textColor="@color/main"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/tableval2"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/totphlder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="150dp"
        android:fontFamily="sans-serif-black"
        android:text="$00.00"
        android:textColor="@color/main"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tandc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_horizontal"
        android:text="@string/tandc"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/cfmorder_but"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/buttons"
        android:fontFamily="sans-serif-black"
        android:text="@string/cfmorderbut"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tandc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>